# ccb-patternsearch

./: README.md
alignment/: CMakeLists.txt  affineWRONG.cpp  bandedNW.cpp  editdist.cpp
alignment/fasta/: edit.fasta  global.fasta  global2.fasta  test.fasta
fmindex/: CMakeLists.txt  README.md
fmindex/src/: alphabet.h  bandmatrix.h  bidirectionalfmindex.cpp  bidirectionalfmindex.h  bitvec.h  cumulativebitvec.h  demo.cpp  fmindex.cpp  fmindex.h  main.cpp  searchscheme.h  substring.h  suffixarray.h
fmindex/testset/: CP001363.reads.fasta  CP001363errors.reads.fasta
fmindex/unittest/: CMakeLists.txt  week1test.cpp  week2test.cpp  week3test.cpp
fmindex/week1/: README.md
fmindex/week2/: README.md
fmindex/week3/: README.md
